# destinepyauth

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: cd.yml  default.yml
auth_scripts/: HIGHWAY_auth.py  auth_destinestreamer.py  auth_eden.py  auth_insula.py  dea-authentication.py
destinepyauth/: __init__.py  api.py  auth.py  auth_harmonized_conflator.py  authentication.py  configs.py  exceptions.py  hooks.py  services.py
notebooks/: cacheb.ipynb  dea.ipynb  eden.ipynb  highway.ipynb  insula.ipynb  streamer.ipynb
tests/: test_api.py  test_authentication.py  test_e2e.py  test_integration.py  test_services.py  test_test.py
