[project]
name = "destinepyauth"
version = "0.2.1"
description = "Harmonized Python script for DestinE authentication."
authors = [
    { name = "David Purnell", email = "davejpurnell@gmail.com" }
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">= 3.9"
keywords = ["DestinE", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "conflator",
    "lxml",
    "pydantic",
    "requests",
    "authlib",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
destinepyauth = "destinepyauth.auth:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["destinepyauth*"]

[tool.setuptools.package-data]
destinepyauth = ["*.pickle"]
